[metadata]
long_description = file: README.md
license = Apache
license_file = LICENSE

[flake8]
exclude = .git,__pycache__,docs/,pipenv/vendor/,get-pipenv.py,setup.py

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=5
not_skip=__init__.py
known_first_party =
    pipenv
    tests
ignore_trailing_comma=true